--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,7 @@ jobs:
     - run: find .
   deploy:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - uses: actions/checkout@v4
       - name: Create SSH key
