add pm2 restart API

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,4 +45,5 @@ jobs:
           ssh musicbox@${{ secrets.MUSICBOX_SERVER_IP }} <<'ENDSSH'
           cd api/production
           npm install
+          pm2 restart API
           ENDSSH
