--- a/config.js.example
+++ b/config.js.example
@@ -6,7 +6,7 @@ const config = {
     database: "ircbot",
     connectTimeout: 60000
   },
-  listPerPage: 100,
+  listPerPage: '100',
 };
 
 module.exports = config;
